--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "graphql-tag": "^2.12.6",
     "next": "12.2.4",
+    "next-graphql-loader": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
